# ohte

./: .env  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  käyttöohje.md  maarittelydokumentti.MD  maarittelydokumentti.md  tuntikirjanpito.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: config.py  index.py  initialize_database.py
src/entities/: item.py  list.py  user.py
src/logic/: app_methods.py
src/repositories/: item_repository.py  list_repository.py  user_repository.py
src/tests/: item_repository_test.py  list_repository_test.py  user_repository_test.py
src/ui/: console_io.py  create_new_user_ui.py  list_ui.py  login_ui.py  tkinter.py  ui.py
