[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Irene Linnanen <irene.linnanen@hotmail.com>"]
readme = "README.md"
packages = [{include = "ot_harjoitustyo"}]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.0.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.2"
coverage = "^7.2.5"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
